--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -1,10 +1,13 @@
 .gridContainer {
   display: grid;
-  grid-template-columns: 1fr, 2fr;
+  grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
+  /* border: darkblue;
+  border-style: solid; */
 }
 
 .gridChild {
   background-color: blueviolet;
+  border-radius: 5px;
   margin: 2px;
   font-size: 2rem;
   color: rgb(76, 228, 233);
