--- a/React/Community/community-app/src/App.css
+++ b/React/Community/community-app/src/App.css
@@ -1,3 +1,24 @@
-.App {
-  text-align: center;
+
+
+.signInContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+.navContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.navLinks{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  padding:0%;
+  margin: 0;
+};
